# atapi

./: README.md  README.rst  gen.py  pyproject.toml  setup.py
atapi/: __init__.py  gen.py
test_pkg/: __init__.py  mod.py
test_pkg/spkg/: mod.py  mod2.py
