[tool.poetry]
name = "atapi"
version = "0.1.0"
description = "Explicitly declare your public API."
authors = ["Harry Slatyer <harry.slatyer@gmail.com>"]
repository = "https://github.com/charmasaur/atapi"
readme = "README.md"
packages = [
    { include = "atapi" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
fissix = "^19.2b1"
dephell = "^0.7.7"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "pep"
prereleases = true

[tool.poetry.scripts]
atapi = 'atapi.py'

#  _______________________________________
# / If you update this file, please run   \
# \ poetry update && dephell deps convert /
#  ---------------------------------------
#        \   ^__^
#         \  (oo)\_______
#            (__)\       )\/\
#                ||----w |
#                ||     ||
